Use the new html with TT on to run tests.

--- a/dev/integration_tests/web/web/index_with_flutterjs_el_tt_on.html
+++ b/dev/integration_tests/web/web/index_with_flutterjs_el_tt_on.html
@@ -7,7 +7,7 @@ found in the LICENSE file. -->
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
 
-  <title>Integration test. App load with flutter.js and onEntrypointLoaded API</title>
+  <title>Integration test. App load with flutter.js and onEntrypointLoaded API. Trusted Types enabled.</title>
 
   <!-- Enable TrustedTypes for 'script'-->
   <meta http-equiv="Content-Security-Policy" content="require-trusted-types-for 'script'">
