--- a/dev/integration_tests/web/web/index_without_flutterjs.html
+++ b/dev/integration_tests/web/web/index_without_flutterjs.html
@@ -3,6 +3,7 @@
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file. -->
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -14,6 +15,7 @@ found in the LICENSE file. -->
   <meta name="apple-mobile-web-app-title" content="Web Test">
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
   application. For more information, see:
@@ -27,7 +29,7 @@ found in the LICENSE file. -->
       }
       scriptLoaded = true;
       var scriptTag = document.createElement('script');
-      scriptTag.src = 'main.dart.js';
+      scriptTag.src = 'main.dart.js?v=' + serviceWorkerVersion;
       scriptTag.type = 'application/javascript';
       document.body.append(scriptTag);
     }
@@ -83,4 +85,5 @@ found in the LICENSE file. -->
     }
   </script>
 </body>
+
 </html>
