Add clipboard-write permission to DartPad iframe in docs
The embedded DartPad iframes in API documentation were triggering a browser console error: \"[Violation] Potential permissions policy violation: clipboard-write is not allowed in this document.\"

This adds the \`allow=\"clipboard-write\"\` attribute to the iframe in the dartpad-sample.html skeleton template, granting the embedded DartPad the minimum permission needed to enable clipboard functionality for copying code examples.

--- a/dev/snippets/config/skeletons/dartpad-sample.html
+++ b/dev/snippets/config/skeletons/dartpad-sample.html
@@ -13,7 +13,8 @@
         </p>
     </div>
     <iframe class="snippet-dartpad"
-        src="https://dartpad.dev/embed-flutter.html?split=60&amp;run=true&amp;sample_id={{id}}&amp;channel={{channel}}">
+        src="https://dartpad.dev/embed-flutter.html?split=60&amp;run=true&amp;sample_id={{id}}&amp;channel={{channel}}"
+        allow="clipboard-write">
     </iframe>
 </div>
 {@end-inject-html}
